src/test/ui/type-alias-impl-trait/issue-98604.stderr
error[E0271]: type mismatch resolving `<fn() -> impl Future<Output = ()> {test} as FnOnce<()>>::Output == Pin<Box<(dyn Future<Output = ()> + 'static)>>`
  --> $DIR/issue-98604.rs:11:5
   |
LL |     Box::new(test) as AsyncFnPtr;
   |     ^^^^^^^^^^^^^^ expected struct `Pin`, found opaque type
   |
note: while checking the return type of the `async fn`
  --> $DIR/issue-98604.rs:7:17
   |
LL | async fn test() {}
   |                 ^ checked the `Output` of this `async fn`, found opaque type
   = note:   expected struct `Pin<Box<(dyn Future<Output = ()> + 'static)>>`
           found opaque type `impl Future<Output = ()>`
   = note: required for the cast to the object type `dyn Fn() -> Pin<Box<(dyn Future<Output = ()> + 'static)>>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
